--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api restfull agendamento de horarios banho e tosa",
   "main": ".mongorc.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
